--- a/app/(default)/owner/add-product/_components/ProductForm.css
+++ b/app/(default)/owner/add-product/_components/ProductForm.css
@@ -258,6 +258,28 @@ button:hover {
   color: #333;
 }
 
+/* spinner */
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: #09f;
+  animation: spin 1s ease infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* spinner ends */
+
 
 /* Media Queries for Responsive Design */
 
