--- a/app/(default)/owner/RuleGrid/RuleGrid.css
+++ b/app/(default)/owner/RuleGrid/RuleGrid.css
@@ -1,9 +1,11 @@
 /* Container for the rule grid */
 .rule-grid-container {
-    padding: 53px;
+    padding: 20px; /* Reduced padding */
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 1062px; /* Limit the max width */
+    margin: 0 auto; /* Center the container */
 }
 
 /* Heading for the rule grid */
@@ -23,11 +25,15 @@
     width: 100%;
     margin-bottom: 15px;
     padding: 12px;
-    font-size: 16px;
+    font-size: 19px;
     border: 1px solid #ccc;
     border-radius: 4px;
     transition: border-color 0.3s;
+    height: 112px; /* Increased height */
+
 }
+
+
 
 .rule-input:focus, .rule-textarea:focus {
     border-color: #4CAF50; /* Green border on focus */
@@ -55,7 +61,7 @@
 }
 
 .cancel-button {
-    background-color: #f44336; /* Red color for cancel button */
+    background-color: #f44336; 
 }
 
 .message {
@@ -77,21 +83,21 @@
 .rule-type-hotel-container,
 .date-picker-container {
     display: flex;
-    justify-content: space-between; /* Distributes space evenly */
-    align-items: center; /* Centers items vertically */
-    margin-bottom: 15px; /* Space below the containers */
+    justify-content: space-between; 
+    align-items: center; 
+    margin-bottom: 15px; 
 }
 
 .rule-type-container,
 .hotel-selection-container,
 .date-input-container {
-    flex: 1; /* Each item will take equal space */
-    margin-right: 10px; /* Space between items */
+    flex: 1; 
+    margin-right: 10px; 
 }
 
 .rule-type-hotel-container .hotel-selection-container:last-child,
 .date-picker-container .date-input-container:last-child {
-    margin-right: 0; /* No margin on the last item */
+    margin-right: 0; 
 }
 
 .rules-list {
@@ -107,11 +113,11 @@
 
 .rule-actions {
     display: flex;
-    gap: 10px; /* Space between buttons */
+    gap: 10px; 
 }
 
 .edit-button {
-    background-color: #008CBA; /* Blue */
+    background-color: #008CBA; 
     color: white;
     padding: 5px 10px;
     border: none;
@@ -120,7 +126,7 @@
 }
 
 .delete-button {
-    background-color: #f44336; /* Red */
+    background-color: #f44336; 
     color: white;
     padding: 5px 10px;
     border: none;
@@ -153,19 +159,19 @@
 }
 
 .rule-table th {
-    background-color: #073985; /* Green header */
+    background-color: #073985; 
     color: white;
 }
 
 .rule-table tr:nth-child(even) {
-    background-color: #e9e3e3; /* Zebra stripe effect */
+    background-color: #e9e3e3; 
 }
 
 .rule-table tr:hover {
-    background-color: #ddd; /* Highlight row on hover */
+    background-color: #ddd; 
 }
 
-/* Button styles within the table */
+
 .table-button {
     padding: 6px 12px;
     margin: 0 5px;
@@ -243,4 +249,9 @@
     background-color: #f08811; /* Red */
     color: white;
 }
+
+
+
+
+
 
