--- a/app/backoffice/(default)/owner/addInitialProductCategory/manage-meta-category/page.css
+++ b/app/backoffice/(default)/owner/addInitialProductCategory/manage-meta-category/page.css
@@ -1,3 +1,8 @@
+.MuiTableRow-root {
+  height: 40px; 
+}
+
+
 @media screen and (min-width: 1380px) and (max-width: 1600px) {
   .input-form-move {
     margin-left: 250px;
