--- a/app/(default)/owner/searchConfiguration/page.css
+++ b/app/(default)/owner/searchConfiguration/page.css
@@ -242,3 +242,16 @@ footer .legal-links a {
 .header-inputs input[type="text"] {
   flex: 1;
 }
+
+
+
+#attributes-container {
+  border: 1px solid #ccc;
+  padding: 10px;
+  height: 150px;
+  overflow-y: auto;
+}
+
+.related-attributes {
+  padding-left: 20px; /* Indent related attributes */
+}
