--- a/app/[locale]/backoffice/(default)/user-management/search-user/page.css
+++ b/app/[locale]/backoffice/(default)/user-management/search-user/page.css
@@ -2,6 +2,7 @@
     padding: 20px;
     max-width: 900px;
     margin: 0 auto;
+    margin-top: 40px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
