--- a/app/[locale]/backoffice/(default)/package/page.css
+++ b/app/[locale]/backoffice/(default)/package/page.css
@@ -20,3 +20,7 @@
 button:hover {
     animation: bounce 0.5s; */
 /* } */
+
+.package-select option:hover {
+    background-color: #f0f0f0; /* Light grey background on hover */
+}
